utilities/Sol/modules/grammars/artifact/src/test/resources/cocos/valid/Environment.ec
PACKAGE valid

COMPONENT DOCKERFILE Environment

RUN "Something To Run"