utilities/Sol/modules/grammars/artifact/src/test/resources/cocos/invalid/Environment.ec
PACKAGE invalid

COMPONENT DOCKERFILE Environment

RUN "Something To Run"